# libtrellis

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
benchmarks/: bench_crypto.c  bench_mesh.c  bench_morph.c  bench_turn.c
include/trellis/: camouflage.h  client.h  conn_pow.h  crypto.h  error.h  greenhouse.h  identity.h  mesh.h  morph.h  probe_resist.h  protocol.h  pt.h  rhizome.h  sybil.h  transport.h  trellis.h  turn.h  types.h
src/: error.c  platform.c  platform.h  types.c
src/crypto/: conn_pow.c  elligator2.c  handshake.c  identity.c  init.c  internal.h  kdf.c  kem.c  key_transparency.c  probe_resist.c  ratchet.c  sign.c  symmetric.c  treekem.c
src/greenhouse/: addressing.c  deadman.c  descriptor.c  internal.h  introduction.c  onion.c  proxy.c  rendezvous.c  reverse_proxy.c  service.c  surb.c
src/mesh/: bootstrap.c  bridge.c  canary.c  canopy.c  circuit_pool.c  clock_sync.c  deaddrop.c  dht.c  doh.c  exit_relay.c  flow.c  gossip.c  grove.c  guard.c  incentive.c  internal.h  naming.c  nat.c  pir.c  relay.c  relay_descriptor.c  routing.c  topology.c
src/morph/: engine.c  internal.h  mutation.c  padding.c  timing.c
src/protocol/: capabilities.c  extensions.c  garden.c  internal.h  messages.c  permissions.c  webrtc_media.c
src/sdk/: client.c  config.c  control.c  discovery.c  events.c  identity_recovery.c  identity_store.c  internal.h  metrics.c  mobile.c
src/sybil/: behavior.c  bridge_trust.c  composite.c  hco.c  internal.h  personhood.c  trust.c  vdf.c
src/transport/: ble.c  camouflage.c  interface.c  internal.h  lora.c  multiplexer.c  pt_subprocess.c  quic.c  tcp.c  tls.c  udp.c  webrtc_stego.c  websocket.c
src/turn/: stun.c  turn.c
tests/: fuzz_build.sh  fuzz_coverage.sh  fuzz_harnesses.c  test_adversarial.c  test_client.c  test_crypto.c  test_e2e.sh  test_elligator2.c  test_exit_relay.c  test_greenhouse.c  test_integration.c  test_kat.c  test_mesh.c  test_morph.c  test_onion.c  test_platform.c  test_protocol.c  test_rhizome.c  test_sybil.c  test_threading_portable.c  test_transport.c  test_treekem.c  test_turn.c  test_turn_e2e.py  test_turn_integration.sh
tests/corpus/capabilities/: seed1
tests/corpus/dht_rpc/: seed1  seed2
tests/corpus/greenhouse_msg/: seed1  seed2
tests/corpus/handshake/: seed1  seed2
tests/corpus/message_parse/: seed1
tests/corpus/morph_decode/: seed1
tests/corpus/surb_unpack/: seed1
